fix(tab): wrong gap space between icon and label (#366)

--- a/packages/bee-q/src/components/tab/scss/bq-tab-variables.scss
+++ b/packages/bee-q/src/components/tab/scss/bq-tab-variables.scss
@@ -3,12 +3,36 @@
 /* -------------------------------------------------------------------------- */
 
 :host {
+  /**
+   * @prop --bq-tab--font-size - Font size
+   * @prop --bq-tab--font-weight - Font weight
+   * @prop --bq-tab--line-height - Line height
+   * @prop --bq-tab--label-icon-gap - Gap between label and icon
+   * @prop --bq-tab--pading-vertical-small - Vertical padding for small tab
+   * @prop --bq-tab--pading-horizontal-small - Horizontal padding for small tab
+   * @prop --bq-tab--pading-vertical-medium - Vertical padding for medium tab
+   * @prop --bq-tab--pading-horizontal-medium - Horizontal padding for medium tab
+   * @prop --bq-tab--pading-vertical-large - Vertical padding for large tab
+   * @prop --bq-tab--pading-horizontal-large - Horizontal padding for large tab
+   * @prop --bq-tab--icon-size-small - Icon size for small tab
+   * @prop --bq-tab--icon-size-medium - Icon size for medium tab
+   * @prop --bq-tab--icon-size-large - Icon size for large tab
+   */
+  --bq-tab--font-size: theme('fontSize.m');
+  --bq-tab--font-weight: theme('fontWeight.medium');
+  --bq-tab--line-height: theme('lineHeight.large');
+
+  --bq-tab--label-icon-gap: theme('spacing.xs');
+
   --bq-tab--pading-vertical-small: theme('spacing.xs2');
   --bq-tab--pading-horizontal-small: theme('spacing.m');
+
   --bq-tab--pading-vertical-medium: theme('spacing.xs');
-  --bq-tab--pading-horizontal-medium: 20px;
+  --bq-tab--pading-horizontal-medium: theme('spacing.l');
+
   --bq-tab--pading-vertical-large: theme('spacing.s');
   --bq-tab--pading-horizontal-large: theme('spacing.l');
+
   --bq-tab--icon-size-small: 20px;
   --bq-tab--icon-size-medium: 24px;
   --bq-tab--icon-size-large: 24px;
